# src/routes/producer.routes.js
@@ -9,5 +9,6 @@ router.post('/login', c.login);
 router.get('/me', authenticate('producer'), c.me);
 router.post('/products', authenticate('producer'), requireVerified, c.addRawProduct);
 router.get('/products', authenticate('producer'), c.listOwnRawProducts);
+router.get('/products/:rawProductId', authenticate('producer'), c.getOwnRawProductById);
 
 module.exports = router;
